fixed code visibility, added more controls

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,3 +4,9 @@
     border: 1px solid black;
     transition: 0.2s all ease;
 }
+
+.content {
+    border: 1px solid black;
+    height: 100%;
+    width: 100%;
+}
