--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -41,43 +41,49 @@
 }
 
 .controls-container {
-    padding-top: 150px;
+    padding-top: 450px;
     padding-bottom: 50px;
     height: 100vh;
     width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
     background-color: azure;
     overflow-y: scroll;
 }
 
-.controls-container > div {
-    /*controller row*/
+.controls-section-header {
+    margin-top: 50px;
+    margin-bottom: 15px;
+}
+
+.controllers-section > div {
+    padding-left: 50px;
+}
+
+.controls-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    gap: 25px;
 }
-.controls-container > div > div {
+
+.controls-row > div {
     /*individual control*/
+    width: 250px;
+    border: 3px solid black;
+    border-radius: 15px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
-    width: 250px;
-    border: 3px solid black;
-    border-radius: 20px;
-    margin-left: 40px;
-    margin-top: 50px;
-    padding: 15px;
-    background-color: floralwhite;
 }
-.controls-container > div > div > div {
-    /*name reset rows*/
+
+.name-reset-container {
     display: flex;
     justify-content: space-between;
 }
+
 .reset-value-container {
     display: flex;
     flex-direction: column;
@@ -106,6 +112,7 @@ input {
     cursor: pointer;
     opacity: 0.5;
     transition: 0.3s all ease;
+    width: 100%;
 }
 input:hover {
     opacity: 1;
